--- a/src/services/UsbDumpService.service
+++ b/src/services/UsbDumpService.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=BirdBot Motion Camera
+Description=BirdBot USB Dump
 After=network.target
 
 [Service]
@@ -7,7 +7,7 @@ Type=idle
 Restart=on-failure
 User=root
 WorkingDirectory=/home/pi/BirdBotV1/src/python
-ExecStart=/usr/bin/python3 motionImageGrab.py
+ExecStart=/usr/bin/python3 usbDump.py
 StandardOutput=inherit
 StandardError=inherit
 
